welcome.lessons.welcome.methods.basics.Methods.scala.error
Methods:22: error: expected start of definition
	override def run() { 
                 ^Methods:30: error: Unmatched closing brace '}' ignored here
}
^